--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
     "mongoose": "^9.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
