--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/throttler": "^6.5.0",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "helmet": "^8.1.0",
     "mongoose": "^9.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
